# plan_desktop_pet

./: .coverage  .gitignore  BUG_REPORT.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_ANALYSIS_REMAINING.md  LICENSE  README.md  hardware_guide.md  plan.md  pyproject.toml  requirements.txt  token_cache.json
docs/: DEPLOYMENT_GUIDE.md  USER_GUIDE.md  api.md  communication_protocol.md  hardware_design_notes.md  pxl_format.md  quick_start.md  项目目前阶段情况-2026年6月24日.md
docs/00-项目总览/: feature-matrix.md  project-overview.md
docs/01-技术架构/: communication-protocol.md  data-flow.md  system-architecture.md
docs/02-硬件指南/: bom-list.md  hardware-components.md  hardware-design-notes.md  hardware-wiring.md
docs/03-固件解析/: communication-stack.md  display-engine.md  dual-core-architecture.md  firmware-overview.md  power-management.md  pxl-format.md  sensor-system.md
docs/04-PC端解析/: agent-detection.md  otlp-integration.md  pc-monitor-overview.md  token-tracking.md  tray-gui.md
docs/05-像素工具/: pixel-animation-tutorial.md  pixel-tool-guide.md
docs/06-软硬件结合/: ota-update.md  (+2 more)
esp32_firmware/: platformio.ini  sdkconfig.defaults
pc_monitor/: main.py  requirements.txt  tray_app.py
pixel_tool/: README.md  __init__.py  pixel_tool.py  pxl_decoder.py  pxl_encoder.py  pxl_sender.py
plan_desktop_pet_opt/: plan.md
tests/: check_syntax.py  conftest.py  test_agent_monitor.py  test_communication.py  test_helpers.py  test_otlp_receiver.py  test_pxl_decoder.py  test_pxl_encoder.py  test_smoke.py  test_thinking_chain.py  test_token_stats.py  test_weather.py  token_cache.json
(+54 files in other folders)
